rename 'dark' theme to 'black' to prevent conflict with future dark mode

--- a/packages/react-components/src/components/AlertBanner/AlertBanner.css
+++ b/packages/react-components/src/components/AlertBanner/AlertBanner.css
@@ -69,9 +69,9 @@
   background-color: var(--support-border-color-danger);
 }
 
-/* Dark theme */
+/* Black theme */
 
-.bcds-Alert-Banner.dark {
+.bcds-Alert-Banner.black {
   background-color: var(--theme-gray-110);
 }
 
